# FSAM-YOLO

./: .gitignore  README.md  fsam_yolo_train.py  fsam_yolo_train_.py  pyproject.toml  requirements.txt  sample_augmentation.py
datasets/ReefFeat-Img dataset/DA-all/labels/: reef10_aug_10.txt  reef10_aug_11.txt  reef10_aug_12.txt  reef10_aug_15.txt  reef10_aug_20.txt  reef10_aug_22.txt  reef10_aug_4.txt  reef10_aug_5.txt  reef10_aug_6.txt  reef10_aug_7.txt  reef11_aug_1.txt  reef11_aug_2.txt  reef11_aug_3.txt  reef11_aug_4.txt  reef11_aug_5.txt  reef12_aug_1.txt  reef12_aug_10.txt  reef12_aug_11.txt  reef12_aug_14.txt  reef12_aug_15.txt  reef12_aug_16.txt  reef12_aug_17.txt  reef12_aug_18.txt  reef12_aug_20.txt  reef12_aug_21.txt  reef12_aug_22.txt  reef12_aug_23.txt  reef12_aug_25.txt  reef12_aug_3.txt  reef12_aug_4.txt  reef12_aug_6.txt  reef12_aug_7.txt  reef13_aug_12.txt  reef13_aug_13.txt  reef13_aug_14.txt  reef13_aug_16.txt  reef13_aug_17.txt  reef13_aug_18.txt  reef13_aug_20.txt  reef13_aug_21.txt  (+384 more)
datasets/ReefFeat-Img dataset/DA/labels/: reef10_aug_1.txt  reef10_aug_14.txt  reef10_aug_18.txt  reef10_aug_2.txt  reef10_aug_8.txt  reef11_aug_14.txt  reef12_aug_0.txt  reef12_aug_12.txt  reef12_aug_13.txt  reef12_aug_9.txt  reef13_aug_0.txt  reef13_aug_1.txt  reef13_aug_11.txt  reef13_aug_15.txt  reef13_aug_19.txt  (+104 more)
datasets/reef/labels/: train.cache  val.cache
runs/fsam-yolo(100epoch)/: args.yaml  results.csv
ultralytics/cfg/datasets/: reef.yaml
ultralytics/models/nas/: model.py
ultralytics/nn/: tasks.py
ultralytics/nn/modules/: __init__.py  conv.py
(+135 files in other folders)
