[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultralytics"
dynamic = ["version"]
description = "FSAM-YOLO: Few-Shot Attention Meta-YOLO (based on Ultralytics YOLOv10)"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.8"

[tool.setuptools.dynamic]
version = {attr = "ultralytics.__version__"}

[tool.setuptools]
packages = {find = {where = ["."], include = ["ultralytics", "ultralytics.*"]}}
